# SO100_Control

./: .gitignore  .gitmodules  AUDIT_REPORT.md  AUDIT_ROUND3_FIXES.md  README.md  joystick_listener.py  main.py  pyproject.toml  robot.ipynb  robot_kinematics.py  simulation.py  webcam_listener.py
.cache/calibration/so100/: main_follower.json  main_leader.json
robot_control/: configs.py  joystick_listener.py  kinematics.py  main.py  main_follower.json  robot_controller.py  sdk_interface.py  trajectory.py
robots/: so100.example.yaml
so100_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
so100_robot_control/: base_controller.py  combined_controller.py  robot_interface.py  simulation_controller.py
so100_robot_control/configs/: __init__.py  configs.py  robot_loader.py
so100_robot_control/configs/randy/: so100.json
so100_robot_control/controllers/: __init__.py  combined_controller.py  teleop_session.py
so100_robot_control/simulation/: __init__.py  joint_map.txt  robot_kinematics.py  robot_simulation.py
so100_robot_control/teleop_devices/: __init__.py  base_teleop_device.py  joystick_listener.py  keyboard_listener.py
tests/: test_kinematics.py  test_trajectory.py
urdf/: my_robot.urdf
