[tool.poetry]
name = "so100_control"
version = "0.1.0"
description = "6-DOF robot control with inverse kinematics and trajectory generation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "robot_control" }]

[tool.poetry.dependencies]
python = "^3.9"
urdfpy = "^0.0.24"
ikpy = "^3.2"
numpy = "^1.23"
scipy = "^1.10"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
