[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "so100_control"
version = "0.2.0"
description = "Cartesian / joint teleoperation for the SO-ARM100 5-DOF robot arm"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Deniz Bekleyis Seven", email = "dseven1995@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    # Core numeric / robotics
    "numpy>=1.21",
    "scipy>=1.7",
    "torch>=1.12",
    "sympy>=1.11",
    "yourdfpy>=0.0.53",
    "pybullet>=3.2",
    # Teleop input
    "pyglet>=2.0",
    "pygame>=2.1",
    # YAML config loading
    "pyyaml>=6.0",
    # Robot hardware driver
    "lerobot",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

[project.scripts]
so100-control = "so100_robot_control.controllers.combined_controller:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["so100_robot_control*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
